# cv_lab_2

./: .gitignore  CMakeLists.txt  main.cpp  sift_pattern_recogn.cpp
MathImg/: MathImg.cpp  MathImg.h
